// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babies actions deleteBaby creates DELETE_BABY action 1`] = `
Object {
  "payload": 1,
  "type": "DELETE_BABY",
}
`;

exports[`babies actions getBabiesFailure creates GET_BABIES_FAILURE action 1`] = `
Object {
  "error": true,
  "payload": [Error: foo],
  "type": "GET_BABIES_FAILURE",
}
`;

exports[`babies actions getBabiesRequest creates GET_BABIES_REQUEST action 1`] = `
Object {
  "type": "GET_BABIES_REQUEST",
}
`;

exports[`babies actions getBabiesSuccess creates GET_BABIES_SUCCESS action 1`] = `
Object {
  "payload": Array [
    Object {
      "id": 1,
      "name": "Foo",
    },
  ],
  "type": "GET_BABIES_SUCCESS",
}
`;

exports[`babies actions selectBaby creates SELECT_BABY action 1`] = `
Object {
  "payload": 1,
  "type": "SELECT_BABY",
}
`;
